Bug 29815 - Weborder_mobile: Checkout, Continue, Submit Payments buttons are not visible

--- a/skins/weborder_mobile/css/main.css
+++ b/skins/weborder_mobile/css/main.css
@@ -366,6 +366,7 @@ h1, h2, h3 {
     bottom: 0;
     left: 0;
     z-index: 2;
+    width: 100%;
 }
 
 .btn {
